--- a/databaser/node_database_api/frontend_egg/css/style.css
+++ b/databaser/node_database_api/frontend_egg/css/style.css
@@ -40,22 +40,22 @@ input[type=text], select {
     align-items: center;
   }
 
-  #Table {
+  Table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-  #Table td, #Table th {
+  Table td, Table th {
     border: 1px solid #ddd;
     padding: 8px;
   }
   
-  #Table tr:nth-child(even){background-color: #f2f2f2;}
+  Table tr:nth-child(even){background-color: #f2f2f2;}
   
-  #Table tr:hover {background-color: #ddd;}
+  Table tr:hover {background-color: #ddd;}
   
-  #Table th {
+  Table th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
